# message-board

./: .gitignore  pyproject.toml
message_board_project/: settings.py  urls.py
posts/: admin.py  models.py  urls.py  views.py
posts/migrations/: 0001_initial.py
templates/: home.html  post_detail.html
