[tool.poetry]
name = "message-board"
version = "0.1.0"
description = ""
authors = ["Sahil Gupta <sahgu@amazon.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.0.6"

[tool.poetry.dev-dependencies]
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
